--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -2108,9 +2108,9 @@ Al fine di conseguire il miglior risultato possibile, il team ha deciso di utili
 
 \subsubsection{Considerazioni}
 
-Il nuovo preventivo a finire precedentemente presentato è stato rispettato in pieno: al fine di conseguire la maggior qualità possibile con le risorse a disposizione è stato deciso di incrementate di 6 ore le attività preventivate per la verifica.
+Il nuovo preventivo a finire precedentemente presentato è stato rispettato in pieno: al fine di conseguire la maggior qualità possibile con le risorse a disposizione è stato deciso di incrementare di 6 ore le attività preventivate per la verifica.
 
-A seguito della riunione esterna del 04-05-2017, nel quale è stato presentato il lavoro fino ad allora svolto, il team è riuscito a presentare un prodotto che è riuscito a soddisfare appieno le richieste e i desideri del cliente. Sono stati raccolti consigli su come raffinare il prodotto finale sfruttando il budget aumentato per le ore di \Vx.
+A seguito della riunione esterna del 04-05-2017, nel quale è stato presentato al \GP{} il lavoro fino ad allora svolto, il team è riuscito a presentare un prodotto che è riuscito a soddisfare appieno le richieste e i desideri del cliente. Sono stati raccolti consigli su come raffinare il prodotto finale sfruttando il budget aumentato per le ore di \Vx.
 
 \pagebreak
 \subsection{Consuntivo finale}
@@ -2215,10 +2215,10 @@ Questa scelta è risultata soddisfacente per l'attività del team: attraverso va
 \subsubsection{Pianificazione di \PDC{} e \VV}
 La pianificazione di queste due fasi ha ricevuto una sostanziale modifica, come già indicato nel consuntivo di periodo rispettivo.
 
-Al termine del progetto, possiamo concludere che la \VV non ne abbia risentito: le attività preventivate sono state svolte senza ritardi ed è stato possibile consegnare il prodotto in tempo. 
+Al termine del progetto, possiamo concludere che la \VV{} non ne abbia risentito: le attività preventivate sono state svolte senza ritardi ed è stato possibile consegnare il prodotto in tempo. 
  
 \subsubsection{Specializzazione dei componenti del team}
-È stato possibile notare durante l'individuazione e assegnazione delle sotto-attività necessarie a completare le attività principali (visualizzate nel presente \emph{Piano di Progetto} tramite diagrammi di Gantt) come i singoli membri del team si siano \textbf{specializzati} in una o più mansioni. Questo è stato di grande aiuto:
+È stato possibile notare durante l'individuazione e assegnazione delle sotto-attività necessarie a completare le attività principali (visualizzate nel presente \emph{Piano di Progetto} tramite diagrammi di Gantt) come i singoli membri del team si siano \textbf{specializzati} in una o più mansioni. In particolare:
 
 \begin{itemize}
 \item la presenza di un membro del gruppo più informato in un ruolo ha permesso di istruire efficacemente gli altri componenti durante i cambi di ruolo;
