--- a/Esterni/Verbali/VE_17-05-04.tex
+++ b/Esterni/Verbali/VE_17-05-04.tex
@@ -26,7 +26,13 @@
 
 Argomenti discussi con il \GP:
 \begin{enumerate}
-	\item \textbf{dimostrazione d'uso} --- Abbiamo fatto al \GP{} una dimostrazione d'uso del prodotto. Nello specifico, abbiamo creato una bozza di nuovo progetto e, dopo poco tempo, abbiamo caricato un progetto già implementato; così, con il progetto caricato, abbiamo potuto dimostrare la corretta generazione e compilazione di un progetto che risulti completo. Il \GP{} si è dimostrato molto soddisfatto e, in particolare, ha apprezzato l'implementazione della visibilità automatica delle variabili.
+	\item \textbf{dimostrazione d'uso} --- Abbiamo fatto al \GP{} una dimostrazione d'uso del prodotto. Nello specifico, abbiamo creato una bozza di nuovo progetto e, dopo poco tempo, abbiamo caricato un progetto già implementato; così, con il progetto caricato, abbiamo potuto dimostrare la corretta generazione e compilazione di un progetto che risulti completo. Il \GP{} si è dimostrato molto soddisfatto e, in particolare, ha apprezzato l'implementazione della visibilità automatica delle variabili. Giudicata molto positivamente anche la presenza di una visualizzazione ad albero che indichi la struttura delle classi del progetto, con attributi e metodi.
+	\item \textbf{contrattazione su requisiti} --- Abbiamo discusso riguardo le funzionalità mancanti del software: il cliente si è dimostrato dello stato del prodotto attuale e non ha richiesto che esso:
+	\begin{itemize}
+		\item generi un programma dotato di interfaccia grafica;
+		\item disponga dei meccanismi orientati ad uno specifico dominio applicativo (stereotipi) al fine di agevolare lo sviluppo;
+		
+	\end{itemize}
 	\item \textbf{critiche al prodotto} --- A seguito della dimostrazione, il \GP{} ci ha anche proposto di ritoccare alcuni dettagli dell'interfaccia grafica; nello specifico, si è dimostrato particolarmente interessato al che noi allargassimo il più possibile lo spazio dedicato al disegno dei diagrammi. Abbiamo dunque convenuto di accontentare questa sua richiesta.
 \end{enumerate}
 
