--- a/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
@@ -218,7 +218,7 @@ Il suo compito è:
 \item istanziare un oggetto Compressor ed invocare su di esso il metodo zip per realizzare la risorsa .zip da ritornare all'utente;
 \item ritornare in risposta all'utente il link a partire dal quale scaricare la risorsa .zip desiderata oppure un messaggio contenente gli errori rilevati dal Parser o dal Generator.
 \end{itemize}
-\\ \textbf{Parametri}:
+ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{httpEntity: HttpEntity<String>}}
 \\ Richiesta http contenente il file .json prodotto dall'editor.
