--- a/Esterni/Lettere/RA.tex
+++ b/Esterni/Lettere/RA.tex
@@ -38,6 +38,7 @@ Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli asp
 	\item \DP;
 	\item \Glossario;
 	\item \MU;
+	\item \emph{src/main/webapp/docs/index.html}, contenente la documentazione per lo sviluppatore, in formato HTML (anche reperibile premendo il pulsante “Documentation” dal menù di \proj;
 	\item Verbali delle riunioni esterne:
 	\begin{itemize}
 		\item \emph{VE\_16-12-15.pdf};
@@ -45,7 +46,7 @@ Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli asp
 		\item \emph{VE\_17-01-10.pdf};
 		\item \emph{VE\_17-03-20.pdf};
 		\item \emph{VE\_17-03-23.pdf};
-		\item \emph{VE\_17-05-04.pdf}; % TODO
+		\item \emph{VE\_17-05-04.pdf};
 	\end{itemize}
 	\item Verbali delle riunioni interne:
 	\begin{itemize}
