--- a/Esterni/Lettere/RA.tex
+++ b/Esterni/Lettere/RA.tex
@@ -30,41 +30,43 @@ Con la presente, il gruppo \hx{} intende comunicarLe la partecipazione alla Revi
 
 Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli aspetti di pianificazione, normazione, qualifica, analisi e progettazione:
 \begin{itemize}
-	\item \NdP;
-	\item \PdP;
-	\item \PdQ;
-	\item \AdR;
-	\item \ST;
-	\item \DP;
-	\item \Glossario;
-	\item \MU;
-	\item \emph{src/main/webapp/docs/index.html}, contenente la documentazione per lo sviluppatore, in formato HTML (anche reperibile premendo il pulsante “Documentation” dal menù di \proj;
+	\item \emph{Documentazione/Interni/}\NdP;
+	\item \emph{Documentazione/Esterni/}\PdP;
+	\item \emph{Documentazione/Esterni/}\PdQ;
+	\item \emph{Documentazione/Esterni/}\AdR;
+	\item \emph{Documentazione/Esterni/}\ST;
+	\item \emph{Documentazione/Esterni/}\DP;
+	\item \emph{Documentazione/Esterni/}\Glossario;
+	\item \emph{Documentazione/Esterni/}\MU;
+	\item \emph{Documentazione/Esterni/}\emph{SWEDesigner/src/main/webapp/docs/index.html}, contenente la documentazione per lo sviluppatore, in formato HTML (anche reperibile premendo il pulsante “Documentation” dal menù di \proj);
+	\item \emph{SWEDesigner/README.md};
 	\item Verbali delle riunioni esterne:
 	\begin{itemize}
-		\item \emph{VE\_16-12-15.pdf};
-		\item \emph{VE\_16-12-21.pdf};
-		\item \emph{VE\_17-01-10.pdf};
-		\item \emph{VE\_17-03-20.pdf};
-		\item \emph{VE\_17-03-23.pdf};
-		\item \emph{VE\_17-05-04.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_16-12-15.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_16-12-21.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_17-01-10.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_17-03-20.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_17-03-23.pdf};
+		\item \emph{Documentazione/Esterni/Verbali/}\emph{VE\_17-05-04.pdf};
 	\end{itemize}
 	\item Verbali delle riunioni interne:
 	\begin{itemize}
-		\item \emph{VI\_16-11-29.pdf};
-		\item \emph{VI\_16-12-12.pdf};
-		\item \emph{VI\_16-12-20.pdf};
-		\item \emph{VI\_16-12-22.pdf};
-		\item \emph{VI\_16-12-23.pdf};
-		\item \emph{VI\_17-01-02.pdf};
-		\item \emph{VI\_17-02-01.pdf};
-		\item \emph{VI\_17-02-08.pdf};
-		\item \emph{VI\_17-02-15.pdf};
-		\item \emph{VI\_17-03-17.pdf};
-		\item \emph{VI\_17-05-01.pdf}.
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_16-11-29.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_16-12-12.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_16-12-20.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_16-12-22.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_16-12-23.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-01-02.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-02-01.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-02-08.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-02-15.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-03-17.pdf};
+		\item \emph{Documentazione/Interni/Verbali/}\emph{VI\_17-05-01.pdf}.
 	\end{itemize}
 \end{itemize}
+Inoltre, all'indirizzo internet \url{http://52.57.102.7} può reperire una versione già configurata e funzionante del prodotto.
 
-Consegniamo il prodotto richiesto in data \textbf{12 maggio 2017} con un consuntivo di \num{11349} \euro{} (euro), come rendicontato nel documento \PdP. All'indirizzo web \url{https://github.com/hivex-unipd/swedesigner} può reperire il codice sorgente del prodotto completo, \emph{open source} sotto licenza pubblica Mozilla 2.0.
+Consegniamo quindi il prodotto richiesto in data \textbf{12 maggio 2017} con un consuntivo di \num{11349} \euro{} (euro), come rendicontato nel documento \PdP. All'indirizzo web \url{https://github.com/hivex-unipd/swedesigner} può reperire il codice sorgente del prodotto completo, \emph{open source} sotto licenza pubblica Mozilla 2.0.
 
 \closing{Distinti Saluti,}
 
