--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_4_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_4_0_0.tex
@@ -2059,7 +2059,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
 		Correttezza & ~ & ~ & ~ \\
-		Numero di violazioni di alta importanza & 0 & 0 \\
+		Numero di violazioni di alta importanza & 0 & 0 & 0\\
 		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
 		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
