--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_4_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_4_0_0.tex
@@ -2437,7 +2437,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 	**** la classe che presenta metodi con una lunghezza superiore a quella accettabile è la classe Parser.
 	
 	
-	\subsection{System Qualification Testing Process \& Software Qualification Testing Process}
+	\subsubsection{System Qualification Testing Process \& Software Qualification Testing Process}
 		Per verificare l'osservanza degli obiettivi di qualità riguardanti la produzione di unità software eseguibili, sono stati calcolati i valori delle seguenti metriche.
 		
 	\begin{center}
@@ -2757,7 +2757,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 	**** la classe che presenta metodi con una lunghezza superiore a quella accettabile è la classe Parser.
 	
 	
-	\subsection{System Qualification Testing Process \& Software Qualification Testing Process}
+	\subsubsection{System Qualification Testing Process \& Software Qualification Testing Process}
 		Per verificare l'osservanza degli obiettivi di qualità riguardanti la produzione di unità software eseguibili, sono stati calcolati i valori delle seguenti metriche.
 		
 	\begin{center}
