--- a/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/Esterni/Analisi_dei_requisiti/diario.tex
@@ -3,10 +3,10 @@
 
 \begin{diario}
 	4.0.0 & {\LB} (Responsabile) & 02/05/2017 & Approvazione del documento \\ \hline
-	4.1.0 & {\PB} (Verificatore) & 02/05/2017 & Verifica del documento \\ \hline
+	3.1.0 & {\PB} (Verificatore) & 02/05/2017 & Verifica del documento \\ \hline
 	3.0.1 & {\MM} (Analista) & 01/05/2017 & 
 	\begin{itemize}
-	\item Inserimento UC5.35;
+	\item Inserimento UC5.35 e relativo requisito;
 	\item Inserimento UC8 e relativo requisito;
 	\item Inserimento tabella Requisiti Implementati come appendice.
 \end{itemize}\\ \hline
