--- a/Esterni/Manuale_utente/Manuale_utente_2_0_0.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_2_0_0.tex
@@ -36,7 +36,9 @@ Questo manuale spiega le funzionalità e le modalità d'utilizzo dell'applicazio
 \scopo
 
 \subsection{Pubblico}
-Questo manuale è rivolto agli utenti del prodotto. Assumeremo che l'utente di \proj{} possegga delle conoscenze almeno basilari nel campo della programmazione a oggetti e della progettazione di software a oggetti; per ogni evenienza, alleghiamo in appendice \ref{app:gloss} un \textbf{glossario di termini utili} riguardanti sia la programmazione a oggetti sia alcune specifiche funzionalità offerte da \proj.
+Questo manuale è rivolto agli utenti del prodotto. Chi invece ne fosse manutentore (o volesse offrirlo come servizio su un proprio server) può trovare delle utili istruzioni nel foglio \emph{README.md} all'indirizzo \repo.
+
+Assumeremo che l'utente di \proj{} possegga delle conoscenze almeno basilari nel campo della programmazione a oggetti e della progettazione di software a oggetti; per ogni evenienza, alleghiamo in appendice \ref{app:gloss} un \textbf{glossario di termini utili} riguardanti sia la programmazione a oggetti sia alcune specifiche funzionalità offerte da \proj.
 
 
 
