--- a/Esterni/Lettere/RA.tex
+++ b/Esterni/Lettere/RA.tex
@@ -66,7 +66,7 @@ Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli asp
 \end{itemize}
 Inoltre, all'indirizzo internet \url{http://52.57.102.7} può reperire una versione già configurata e funzionante del prodotto.
 
-Consegniamo quindi il prodotto richiesto in data \textbf{12 maggio 2017} con un consuntivo di \num{11349} \euro{} (euro), come rendicontato nel documento \PdP. All'indirizzo web \url{https://github.com/hivex-unipd/swedesigner} può reperire il codice sorgente del prodotto completo, \emph{open source} sotto licenza pubblica Mozilla 2.0.
+Consegniamo quindi il prodotto in data \textbf{12 maggio 2017} con un consuntivo di \num{11349} \euro{} (euro), come rendicontato nel documento \PdP. All'indirizzo web \url{https://github.com/hivex-unipd/swedesigner} può reperire il codice sorgente del prodotto completo, \emph{open source} sotto licenza pubblica Mozilla 2.0.
 
 \closing{Distinti Saluti,}
 
