Lettera di pres.

--- a/Esterni/Lettere/RA.tex
+++ b/Esterni/Lettere/RA.tex
@@ -10,6 +10,7 @@
 \usepackage{hyperref}
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-vers}
+\pagenumbering{gobble}
 \date{Padova, \today}
 \signature{\LB\\Responsabile \hx{}\\
 \includegraphics[scale=1]{../Piano_di_progetto/img/firmalb.jpg}}
