rivisto requisito, tolto riferimento stereotipi scopo prodotto

--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_4_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_4_0_0.tex
@@ -2711,7 +2711,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hypertarget{RFO6}{RFO6} & l'attore può ottenere (scaricare) automaticamente una cartella compressa contenente i diagrammi disegnati da \proj{}, l'applicativo generato tramite i diagrammi forniti dall'utente ed il codice sorgente nel linguaggio target & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
 & & \hyperref[UC7]{UC7}\\ \hline
 
-\hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti& \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se i dati inseriti dall'utente nell'editor non rispettano le specifiche del linguaggio target di generazione& \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC7.1]{UC7.1}\\ \hline
 
 \hypertarget{RFD12}{RFD12} & l'attore può importare un progetto &  \hyperlink{Riunione Esterna}{Riunione Esterna}\\
