--- a/util/hx-macro.sty
+++ b/util/hx-macro.sty
@@ -15,8 +15,7 @@ Scopo del prodotto è quello di implementare un \gloss{editor} \gloss{UML} che c
 Il sistema offre le seguenti funzionalità:
 \begin{itemize}
 	\item fornire all'utente la possibilità di realizzare l'architettura di classi e il codice dei metodi dell'applicativo desiderato tramite due tipologie di diagrammi ispirate ai diagrammi UML delle classi e delle attività, ma opportunamente modificate per guidare la progettazione e la stesura del codice garantendone completezza, coesione e una buona qualità di strutturazione;
-	\item generare un applicativo eseguibile scritto in codice \gloss{Java} a partire dai diagrammi realizzati dall'utente, a patto che essi siano completi e corretti;
-	\item aiutare l'utente nella realizzazione della sua applicazione fornendo stereotipi e strumenti di supporto aggiuntivi coerenti con il dominio applicativo di riferimento.
+	\item generare un applicativo eseguibile scritto in codice \gloss{Java} a partire dai diagrammi realizzati dall'utente, a patto che essi siano completi e corretti.
 \end{itemize}
 
 L'editor dovrà infine essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}.
