aggiunti diari ST e DP

--- a/Esterni/Definizione_di_prodotto/diario.tex
+++ b/Esterni/Definizione_di_prodotto/diario.tex
@@ -2,6 +2,10 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	2.0.0 & {\LB} (Responsabile) & 11/05/2017 & Approvazione del documento \\ \hline
+	1.1.0 & {\LS} (Verificatore) & 10/05/2017 & Verifica del documento \\ \hline
+	1.0.2 & {\GG} (Progettista) & 05/05/2017 & Revisione sezione \ref{sec:back} \\ \hline
+	1.0.1 & {\AZ} (Progettista) & 05/05/2017 & Revisione sezione \ref{sec:front} \\ \hline
 	1.0.0 & {\MM} (Responsabile) & 14/03/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\AZ} (Verificatore) & 14/03/2017 & Verifica del documento \\ \hline
 	0.0.10 & {\PB} (Progettista) & 13/03/2017 & Stesura sezione \ref{sec:tracc} \\ \hline
