--- a/Esterni/Specifica_tecnica/diario.tex
+++ b/Esterni/Specifica_tecnica/diario.tex
@@ -2,6 +2,10 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	3.0.0 & {\LB} (Responsabile) & 11/05/2017 & Approvazione documento \\ \hline
+	2.1.0 & {\LS} (Verificatore) & 09/05/2017 & Verifica sezioni aggiornate \\ \hline
+	2.0.2 & {\GG} (Progettista) & 04/05/2017 & Revisione sezione \ref{sec:frontend} \\ \hline
+	2.0.1 & {\AZ} (Progettista) & 30/04/2017 & Revisione sezione \ref{sec:backend} \\ \hline
 	2.0.0 & {\MM} (Responsabile) & 10/04/2017 & Approvazione documento \\ \hline
 	1.1.0 & {\AZ} (Verificatore) & 10/04/2017 & Verifica sezioni aggiornate \\ \hline
 	1.0.2 & {\MM} (Progettista) & 28/03/2017 & Revisione appendice \ref{sec:app_creaz} e diagrammi sez. \ref{sec:frontend} \\ \hline
