--- a/Esterni/Manuale_utente/Manuale_utente_2_0_0.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_2_0_0.tex
@@ -221,12 +221,12 @@ Cliccando su uno dei blocchi nella barra di creazione, esso verrà inserito nell
 
 \paragraph{Compressione ed espansione di un blocco} È spesso utile guardare un metodo da un punto di vista più generale, più astratto. Cliccando sull'angolo in alto a destra di un blocco composito contenente altri blocchi, il blocco composito si rimpicciolisce e i blocchi al suo interno vengono nascosti: questo permette di avere uno sguardo più generale su un metodo lungo o complesso.
 
-\paragraph{Rimozione di blocchi} Per rimuovere un blocco da un diagramma di attività, passate sul blocco con il mouse: comparirà una “X” su sfondo rosso che potrete cliccare per rimuovere il blocco.
+\paragraph{Rimozione di blocchi} Per rimuovere un blocco da un diagramma di attività, cliccate sul blocco e premete il tasto \textsc{canc}. % passate sul blocco con il mouse: comparirà una “X” su sfondo rosso che potrete cliccare per rimuovere il blocco.
 
 \subsubsection{Modificare l'architettura}
 Una volta modificata l'implementazione di un metodo, per modificare l'architettura dell'intera applicazione dovete tornare al diagramma delle classi. Per fare ciò, cliccate sul pulsante in basso a destra \click{Back to Class Diagram}. Il diagramma di attività modificato verrà salvato e, al suo posto, vi verrà presentato il diagramma delle classi.
 
-Dal diagramma delle classi, potete modificare l'architettura dell'applicazione in vari modi: potete spostare o rimuovere ogni relazione tra componenti dell'applicazione e potete aggiungere o rimuovere componenti. Per aggiungere una componente, tornate alla sezione \ref{par:creaz_class}; per rimuoverla, passateci sopra con il mouse: comparirà una “X” su sfondo rosso che potrete cliccare per rimuovere la componente.
+Dal diagramma delle classi, potete modificare l'architettura dell'applicazione in vari modi: potete spostare o rimuovere ogni relazione tra componenti dell'applicazione e potete aggiungere o rimuovere componenti. Per aggiungere una componente, tornate alla sezione \ref{par:creaz_class}; per rimuoverla, cliccateci sopra e premete il tasto \textsc{canc}.% passateci sopra con il mouse: comparirà una “X” su sfondo rosso che potrete cliccare per rimuovere la componente.
 
 
 
